Cleans code